# shenzhen_solitaire

./: .gitignore  .gitlab-ci.yml  CI_README.md  Dockerfile  Makefile  Pipfile  README.md  board.py  board_actions.py  board_possibilities.py  colors.txt  main.py
benchmark/: __main__.py  timing.py  unsolved.py  util.py
solver/: Cargo.toml  README.md  clippy.cfg
solver/aux/actions/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json
solver/aux/boards/normal/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json
solver/aux/boards/specific/: dragonkill.json  scarce.json  solved.json
solver/lib/action_optimization/: Cargo.toml
solver/lib/action_optimization/src/: drawing.rs  graph_entity.rs  lib.rs  optimize.rs  relation.rs  test_actions.rs  tests.rs  util.rs
solver/lib/actions/: Cargo.toml
solver/lib/actions/src/: base.rs  lib.rs  move_action.rs  possibilities.rs  tests.rs
solver/lib/board/: Cargo.toml
solver/lib/board/fuzz/: Cargo.toml
solver/lib/board/fuzz/fuzz_targets/: fuzz_target_1.rs
solver/lib/board/src/: board_class.rs  cards.rs  fieldposition.rs  lib.rs  positions.rs  test_boards.rs  tests.rs
solver/lib/solving/: Cargo.toml
solver/lib/solving/src/: benchmark.rs  lib.rs  solve.rs  tests.rs
solver/lib/solving/src/board_state_iterator/: action_board.rs  base.rs  board_state_tree.rs  mod.rs  stack_frame.rs
solver/src/: lib.rs
(+42 files in other folders)
