[package]
name = "shenzhen"
version = "0.1.0"
authors = ["Lukas Wölfer <lukas.woelfer@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = {path = "lib/board"}
actions = {path = "lib/actions"}
action_optimization = {path = "lib/action_optimization"}
solving = {path = "lib/solving"}

serde = {version="1.0.105",features=["derive"]}
serde_json = "1.0"
structopt = "0.3.14"