[package]
name = "action_optimization"
version = "0.1.0"
authors = ["Lukas Wölfer <lukas.woelfer@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.105",features=["derive"]}
serde_json = "1.0"
petgraph = "0.5.1"

board = {path = "../board"}
actions = {path = "../actions"}