[package]
name = "solving"
version = "0.1.0"
authors = ["Lukas Wölfer <lukas.woelfer@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = {path = "../board" }
actions = {path = "../actions"}
graphing = {package = "action_optimization", path = "../action_optimization"}
